--- a/www.nass.gov.ng/4fba38d97cdc773488a617aa1bf9767e490365a3.yml
+++ b/www.nass.gov.ng/4fba38d97cdc773488a617aa1bf9767e490365a3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 13:13:12 GMT
+    - Sun, 12 Aug 2018 09:11:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=IguI0-COt7lt%2C-q6Ww4Ky3; path=/
+    - PHPSESSID=rsNnWASlLQyTr8gp59AwS2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 13:13:12 GMT
+recorded_at: Sun, 12 Aug 2018 09:11:38 GMT
