--- a/www.nass.gov.ng/c18f4dace7b8a99813c6be09d0c304642c182fdf.yml
+++ b/www.nass.gov.ng/c18f4dace7b8a99813c6be09d0c304642c182fdf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 13:16:36 GMT
+    - Sun, 12 Aug 2018 09:14:47 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=0CRnx3dufpZ148NJ%2Cug632; path=/
+    - PHPSESSID=ryPTOwvvd620M9z4KFpK71; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 13:16:37 GMT
+recorded_at: Sun, 12 Aug 2018 09:14:47 GMT
