--- a/www.nass.gov.ng/f08c8344a52455617e76344e7ab55af36073f512.yml
+++ b/www.nass.gov.ng/f08c8344a52455617e76344e7ab55af36073f512.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 13:25:03 GMT
+    - Sun, 12 Aug 2018 09:24:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=LqC2%2CEC7rkTVwoGEZYy3I1; path=/
+    - PHPSESSID=Euqk3TGLWTAdEk2e0a8jl0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 13:25:03 GMT
+recorded_at: Sun, 12 Aug 2018 09:24:14 GMT
