--- a/www.nass.gov.ng/c05f8916b0d8194647630b6b6d0e10196924421a.yml
+++ b/www.nass.gov.ng/c05f8916b0d8194647630b6b6d0e10196924421a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 13:30:56 GMT
+    - Sun, 12 Aug 2018 09:30:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=0E2-kb%2CF%2CvxS68NgT3d-c0; path=/
+    - PHPSESSID=A26RbLahyUtvBYCrsriIk0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 13:30:56 GMT
+recorded_at: Sun, 12 Aug 2018 09:30:22 GMT
