--- a/www.nass.gov.ng/b8e9d97c73acfe51fff28dfe2cdc632ca4faa9d7.yml
+++ b/www.nass.gov.ng/b8e9d97c73acfe51fff28dfe2cdc632ca4faa9d7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 13:38:44 GMT
+    - Sun, 12 Aug 2018 09:38:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mvLt04pRjtw1hrxrdhug11; path=/
+    - PHPSESSID=NL660VlW-RR1S%2C1BmyRkR1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 13:38:45 GMT
+recorded_at: Sun, 12 Aug 2018 09:38:02 GMT
