--- a/www.nass.gov.ng/be58c7a9f5f5e06079cae04efe9edea89bc83f73.yml
+++ b/www.nass.gov.ng/be58c7a9f5f5e06079cae04efe9edea89bc83f73.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 13:42:48 GMT
+    - Sun, 12 Aug 2018 09:42:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=lg21tnuC7Ms-N94Quq6Fu0; path=/
+    - PHPSESSID=MgXl1NRFAv6YuFWjROW4%2C2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 13:42:49 GMT
+recorded_at: Sun, 12 Aug 2018 09:42:24 GMT
