--- a/www.nass.gov.ng/fc576ad6c55e6544968ff1f70af934a52d046b43.yml
+++ b/www.nass.gov.ng/fc576ad6c55e6544968ff1f70af934a52d046b43.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 14:02:05 GMT
+    - Sun, 12 Aug 2018 10:02:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7a5hCrKEiIKlIC2uOozpB3; path=/
+    - PHPSESSID=dDhbFRCdgI%2C2uKVdCDnMn1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 14:02:05 GMT
+recorded_at: Sun, 12 Aug 2018 10:02:07 GMT
