--- a/www.nass.gov.ng/f9ea8bda523b542720055fa38f7df635df3ad751.yml
+++ b/www.nass.gov.ng/f9ea8bda523b542720055fa38f7df635df3ad751.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 14:06:19 GMT
+    - Sun, 12 Aug 2018 10:07:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=b5VhPWLDa9g0Kb9CPoAh31; path=/
+    - PHPSESSID=SkBBeBclXg%2CGaQY7rPPR51; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 11 Aug 2018 14:06:19 GMT
+recorded_at: Sun, 12 Aug 2018 10:07:11 GMT
