--- a/www.nass.gov.ng/3e060fc4c2bed1034d20a73932323b90dc28f477.yml
+++ b/www.nass.gov.ng/3e060fc4c2bed1034d20a73932323b90dc28f477.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 14:13:55 GMT
+    - Sun, 12 Aug 2018 10:14:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ALTNGLOJluaip-vf-x7ec3; path=/
+    - PHPSESSID=Yb9Y79EOVFs84uumBXd%2C-1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 14:13:56 GMT
+recorded_at: Sun, 12 Aug 2018 10:14:16 GMT
