--- a/www.nass.gov.ng/3498dc6b736bdd60aebf760b0f2eb6a02b5286a2.yml
+++ b/www.nass.gov.ng/3498dc6b736bdd60aebf760b0f2eb6a02b5286a2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 14:19:42 GMT
+    - Sun, 12 Aug 2018 10:20:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CE2rx3zuRg1mwMoT9xEZc0; path=/
+    - PHPSESSID=lM8XRsHo3KzOwhDCoZsbq1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 14:19:43 GMT
+recorded_at: Sun, 12 Aug 2018 10:20:19 GMT
