--- a/www.nass.gov.ng/44a7259ca7ebacecf6079574427f795d2a4d8b5c.yml
+++ b/www.nass.gov.ng/44a7259ca7ebacecf6079574427f795d2a4d8b5c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 14:22:25 GMT
+    - Sun, 12 Aug 2018 10:22:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=lUANSvRM%2CYFkwR-YRUIGV3; path=/
+    - PHPSESSID=AAIQirHt%2ChOQYag2xIDum1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 14:22:25 GMT
+recorded_at: Sun, 12 Aug 2018 10:22:15 GMT
