--- a/www.nass.gov.ng/780fd2618c26e2caf2208d3a8bff622ea6a21a79.yml
+++ b/www.nass.gov.ng/780fd2618c26e2caf2208d3a8bff622ea6a21a79.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 14:31:15 GMT
+    - Sun, 12 Aug 2018 10:29:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=rVjpnDlTS0HyQ7XGg%2C1343; path=/
+    - PHPSESSID=3d6x0o5%2Cf297bTgBIKdGb1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 14:31:15 GMT
+recorded_at: Sun, 12 Aug 2018 10:29:48 GMT
