--- a/www.nass.gov.ng/b88f0bb0e2e9004b3f5c25c98e5787dad1c99b18.yml
+++ b/www.nass.gov.ng/b88f0bb0e2e9004b3f5c25c98e5787dad1c99b18.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 14:52:48 GMT
+    - Sun, 12 Aug 2018 10:51:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=rVZNNhHxMO3NWL%2CF1eF1f3; path=/
+    - PHPSESSID=LQ7y9ne5FwsnqnTOQFn2d0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 14:52:48 GMT
+recorded_at: Sun, 12 Aug 2018 10:51:34 GMT
