--- a/www.nass.gov.ng/e480ec90567be945f7ea2654b3407ae8e13a4f8e.yml
+++ b/www.nass.gov.ng/e480ec90567be945f7ea2654b3407ae8e13a4f8e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 15:02:54 GMT
+    - Sun, 12 Aug 2018 11:00:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9P1OOBjq5h3e5AJ5k5jO10; path=/
+    - PHPSESSID=5o07z88z-rhi5-6%2CRDuMA1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 15:02:54 GMT
+recorded_at: Sun, 12 Aug 2018 11:00:48 GMT
