--- a/www.nass.gov.ng/03a2d417e121e1a87cbc8cb61de14351c9a81f6d.yml
+++ b/www.nass.gov.ng/03a2d417e121e1a87cbc8cb61de14351c9a81f6d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 15:04:37 GMT
+    - Sun, 12 Aug 2018 11:03:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mT8j4VW4W0IPUO%2C2s9mIu0; path=/
+    - PHPSESSID=vXj56SiE6Q8lZqvMbs%2C3E3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 15:04:37 GMT
+recorded_at: Sun, 12 Aug 2018 11:03:36 GMT
