--- a/www.nass.gov.ng/57805d22a9cf3ee7eceba782e7b828d385539848.yml
+++ b/www.nass.gov.ng/57805d22a9cf3ee7eceba782e7b828d385539848.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 15:06:28 GMT
+    - Sun, 12 Aug 2018 11:05:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=BKaJxekO3tq%2C%2CVjoOAttK2; path=/
+    - PHPSESSID=Cu%2C18JySqGvaa2bYdeDZP0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 15:06:28 GMT
+recorded_at: Sun, 12 Aug 2018 11:05:24 GMT
