--- a/www.nass.gov.ng/e4044464658391f8db3431720378c943a8f2034c.yml
+++ b/www.nass.gov.ng/e4044464658391f8db3431720378c943a8f2034c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 15:34:51 GMT
+    - Sun, 12 Aug 2018 11:32:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1H8v%2C0QnkmadoK6SiOKrR1; path=/
+    - PHPSESSID=E6VZ7D581Jk0JI6ra--Aw1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 15:34:51 GMT
+recorded_at: Sun, 12 Aug 2018 11:32:18 GMT
