--- a/www.nass.gov.ng/848335c48c1bb208ba8cd6ba16b267cfe7873f85.yml
+++ b/www.nass.gov.ng/848335c48c1bb208ba8cd6ba16b267cfe7873f85.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 15:58:10 GMT
+    - Sun, 12 Aug 2018 11:52:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=yIm1G7X9gGroPlmFM-GEN2; path=/
+    - PHPSESSID=Ojoged%2Cifn-q25l9UKNZT2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 15:58:10 GMT
+recorded_at: Sun, 12 Aug 2018 11:52:20 GMT
