--- a/www.nass.gov.ng/a7bc639500c77586fea1b9f1488b37a5fc278186.yml
+++ b/www.nass.gov.ng/a7bc639500c77586fea1b9f1488b37a5fc278186.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 16:03:37 GMT
+    - Sun, 12 Aug 2018 11:57:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7PsKb3mUdhKLn4AP%2Ct4Kw0; path=/
+    - PHPSESSID=Z6-4T7pyVxxpNIZX8wLyM3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 16:03:37 GMT
+recorded_at: Sun, 12 Aug 2018 11:57:38 GMT
